# service-sdk-light

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_tests.yaml  tests.yaml
service-sdk/: Cargo.toml
service-sdk-macros/: Cargo.toml
service-sdk-macros/src/: lib.rs
service-sdk/src/: lib.rs
service-sdk/src/builders/: consts.rs  grpc_server_builder.rs  http_server_builder.rs  mod.rs  signal_r_builder.rs
service-sdk/src/common/: mod.rs  service_info_accessor.rs
service-sdk/src/http/: http_server.rs
service-sdk/src/sdk_metrics/: grpc_metrics_middleware.rs  http_metrics_middleware.rs  mod.rs
service-sdk/src/service_context/: service_context.rs
src/: lib.rs
src/common/: consts.rs  service_info_accessor.rs
src/http/: http_server.rs  mod.rs
src/service_context/: service_context.rs
