[package]
name = "service-sdk-macros"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
my-service-bus = []
no-sql-reader = []
no-sql-writer = []
postgres = []


[lib]
proc-macro = true

[dependencies]
quote = "*"
