[package]
name = "service-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
macros = [
    "my-no-sql-sdk?/macros",
    "my-service-bus?/macros",
    "my-grpc-extensions?/grpc-server",
    "my-grpc-extensions?/grpc-client",
]

full = ["service-bus", "no-sql-reader", "no-sql-writer", "grpc", "psql"]
service-bus = ["dep:my-service-bus", "service-sdk-macros/service-bus"]
no-sql-reader = [
    "dep:my-no-sql-sdk",
    "dep:serde",
    "service-sdk-macros/no-sql-reader",
]

no-sql-writer = [
    "dep:my-no-sql-sdk",
    "dep:serde",
    "service-sdk-macros/no-sql-writer",
]

grpc = ["dep:tonic", "dep:hyper", "dep:my-grpc-extensions"]
psql = ["dep:my-postgres", "service-sdk-macros/psql"]

[dependencies]
serde = { version = "*", optional = true }
tokio = { version = "*", features = ["full"] }
tonic = { version = "*", features = [
    "tls",
    "tls-roots",
    "prost",
], optional = true }
hyper = { version = "*", optional = true }


service-sdk-macros = { path = "../service-sdk-macros" }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

is-alive-middleware = { git = "https://github.com/MyJetTools/is-alive-middleware.git", tag = "0.6.0" }
my-telemetry = { tag = "1.0.1", git = "https://github.com/MyJetTools/my-telemetry.git", features = [
    "my-telemetry-writer",
] }

my-no-sql-sdk = { optional = true, git = "https://github.com/MyJetTools/my-no-sql-sdk.git", tag = "0.1.1", features = [
    "data-writer",
    "reader",
    "abstractions",
] }


my-service-bus = { optional = true, git = "https://github.com/MyJetTools/my-service-bus-sdk.git", tag = "0.1.0", features = [
    "client",
] }

my-logger = { tag = "1.0.2", git = "https://github.com/MyJetTools/my-logger.git", features = [
    "my-seq-logger",
] }
my-http-server = { tag = "0.6.0", git = "https://github.com/MyJetTools/my-http-server", features = [
    "controllers",
    "macros",
    "with-telemetry",
] }

my-postgres = { tag = "0.4.3", git = "https://github.com/MyJetTools/my-postgres.git", features = [
    "with-logs-and-telemetry",
    "with-tls",
], optional = true }

my-grpc-extensions = { optional = true, tag = "0.5.0", git = "https://github.com/MyJetTools/my-grpc-extensions", features = [
    "with-telemetry",
] }
