[package]
name = "service-sdk"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

my-nosql-sdk = ["dep:my-no-sql-sdk"]

my-nosql-sdk-data-reader = [
    "dep:my-no-sql-sdk",
    "my-no-sql-sdk/data-reader",
    "service-sdk-macros/no-sql-reader",
]

my-nosql-sdk-data-writer = [
    "dep:my-no-sql-sdk",
    "my-no-sql-sdk/data-writer",
    "service-sdk-macros/no-sql-writer",
]

macros = [
    "my-no-sql-sdk?/macros",
    "my-service-bus?/macros",
    "my-grpc-extensions?/grpc-server",
    "my-grpc-extensions?/grpc-client",
]

full = [
    "my-service-bus",
    "my-nosql-sdk",
    "my-nosql-sdk-data-reader",
    "my-nosql-sdk-data-writer",
    "grpc",
    "postgres",
    "macros",
]
my-service-bus = ["dep:my-service-bus", "service-sdk-macros/my-service-bus"]


grpc = ["dep:tonic", "dep:hyper", "dep:futures-core", "dep:my-grpc-extensions"]
postgres = [
    "dep:my-postgres",
    "dep:tokio-postgres",
    "service-sdk-macros/postgres",
]

signal-r = ["my-http-server/signal-r"]


[dependencies]
serde = { version = "*" }
tokio = { version = "*", features = ["full"] }
tonic = { version = "*", features = [
    "tls",
    "tls-roots",
    "prost",
], optional = true }
hyper = { version = "*", optional = true }
async-trait = "*"

service-sdk-macros = { path = "../service-sdk-macros" }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

is-alive-middleware = { git = "https://github.com/MyJetTools/is-alive-middleware.git", tag = "0.6.0" }
my-telemetry = { tag = "1.0.1", git = "https://github.com/MyJetTools/my-telemetry.git", features = [
    "my-telemetry-writer",
] }

my-no-sql-sdk = { optional = true, git = "https://github.com/MyJetTools/my-no-sql-sdk.git", tag = "0.1.1", features = [
    "abstractions",
] }


my-service-bus = { optional = true, git = "https://github.com/MyJetTools/my-service-bus-sdk.git", tag = "1.0.1", features = [
    "client",
    "with-telemetry",
] }

my-logger = { tag = "1.0.2", git = "https://github.com/MyJetTools/my-logger.git", features = [
    "my-seq-logger",
] }
my-http-server = { tag = "0.6.0", git = "https://github.com/MyJetTools/my-http-server", features = [
    "controllers",
    "macros",
    "with-telemetry",
] }

my-postgres = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-postgres.git", features = [
    "with-telemetry",
    "with-tls",
    "macros",
], optional = true }

tokio-postgres = { version = "*", optional = true }

my-grpc-extensions = { optional = true, tag = "0.5.0", git = "https://github.com/MyJetTools/my-grpc-extensions", features = [
    "with-telemetry",
] }


my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

flurl = { tag = "0.4.0", git = "https://github.com/MyJetTools/fl-url.git" }
serde_yaml = { version = "*" }

futures-core = { version = "*", optional = true }
